# UOL-FinalYearProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.bat  main.cpp
Parallel/: CMakeLists.txt
Parallel/include/: CLContext.hpp  Timer.hpp  Utils.h
Parallel/opencl/: kernels.cl
Parallel/src/: main.cpp
Sequential/: CMakeLists.txt
Sequential/include/: BlockMatching.hpp
Sequential/src/: main.cpp
Shared/include/: Capture.hpp  Dicom.hpp  Timer.hpp  Utils.hpp
data/: input_test.avi
headers/: Timer.hpp  Utils.hpp
include/: BlockMatching.h  CLContext.hpp  DICOM.h  opencv.h
opencl/: kernels.cl
results/raw/parallel/: 1490447243.txt  1490464451.txt
results/raw/sequential/: 1490448382.txt
scripts/: DicomConvert.m  DicomInfo.m  HeartPlot.m
src/: BlockMatching.cpp  DICOM.cpp  main.cpp  parallel.cpp  sequential.cpp
src/Parallel/: CMakeLists.txt
src/Parallel/src/: main.cpp
src/Sequential/: CMakeLists.txt
src/Sequential/include/: BlockMatching.hpp
src/Sequential/src/: main.cpp
src/Shared/include/: Capture.hpp  Drawing.hpp  IO.hpp  SimpleGraph.hpp  Utils.hpp
targets/BlockMatching/Parallel/: CMakeLists.txt
targets/BlockMatching/Parallel/opencl/: kernels.cl
targets/BlockMatching/Parallel/src/: main.cpp
targets/BlockMatching/Sequential/: CMakeLists.txt
targets/BlockMatching/Sequential/include/: BlockMatching.hpp
targets/BlockMatching/Sequential/src/: main.cpp
targets/Segmentation/Parallel/: CMakeLists.txt
targets/Segmentation/Parallel/src/: main.cpp
targets/Segmentation/Sequential/: CMakeLists.txt
targets/Segmentation/Sequential/include/: Segmentation.hpp
targets/Segmentation/Sequential/src/: main.cpp
targets/Shared/include/: Capture.hpp  SimpleGraph.hpp  Utils.hpp
